unpackaged/main/default/objects/inov8__PMT_Program__c/inov8__PMT_Program__c.object-meta.xml
<CustomObject>
    <description>Use in Project Management Tool to record Programs and related projects.</description>
    <label>PMT Program</label>
    <nameField>
        <label>Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PMT Programs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>