unpackaged/main/default/objects/inov8__PMT_Program__c/fields/inov8__Program_Health__c.field-meta.xml
<CustomField>
    <fullName>inov8__Program_Health__c</fullName>
    <label>Program Health</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>inov8__PMT_Status</valueSetName>
    </valueSet>
</CustomField>