unpackaged/main/default/objects/inov8__PMT_Program__c/fields/inov8__Program_Owner__c.field-meta.xml
<CustomField>
    <fullName>inov8__Program_Owner__c</fullName>
    <formula>Owner:User.FirstName +&quot; &quot;+ Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Owner</label>
    <type>Text</type>
</CustomField>