unpackaged/main/default/objects/inov8__PMT_Program__c/listViews/inov8__All_Programs.listView-meta.xml
<ListView>
    <fullName>inov8__All_Programs</fullName>
    <columns>NAME</columns>
    <columns>inov8__Program_Owner__c</columns>
    <columns>inov8__Program_Health_Icon__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Programs</label>
</ListView>